--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Character Tracker</title>
+    <title>Character Tracker - Home</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        nav a {
-            margin: 0 10px;
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        nav a { margin: 10px; text-decoration: none; }
     </style>
 </head>
 <body>
+    <h1>Character Tracker - Home</h1>
     <nav>
         <a href="add-character.html">Add Character</a>
         <a href="update-values.html">Update Values</a>
-        <a href="characters.html">Characters</a>
+        <a href="view-characters.html">View Characters</a>
     </nav>
-    <h1>Welcome to the Character Tracker</h1>
+    <p>Welcome to the Character Tracker application. Use the navigation links above to manage characters.</p>
 </body>
 </html>
 
