--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="add-character.html">Add Character</a>
         <a href="update-values.html">Update Values</a>
-        <a href="view-characters.html">View Characters</a>
+        <a href="view-characters.html">Scoreboard</a>
     </nav>
     <p>Welcome to the Character Tracker application. Use the navigation links above to manage characters.</p>
 </body>
