--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Character Tracker - Home</title>
+    <title>Home</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         nav a { margin: 10px; text-decoration: none; }
+        input, button { display: block; margin: 10px 0; }
     </style>
 </head>
 <body>
-    <h1>Character Tracker - Home</h1>
+    <h1>Home</h1>
     <nav>
+        <a href="index.html">Home</a>
         <a href="add-character.html">Add Character</a>
         <a href="update-values.html">Update Values</a>
         <a href="scoreboard.html">Scoreboard</a>
     </nav>
-    <p>Welcome to the Character Tracker application. Use the navigation links above to manage characters.</p>
 </body>
 </html>
-
