--- a/add-character.html
+++ b/add-character.html
@@ -46,7 +46,7 @@
     </table>
     <script>
         const correctUsername = "teacher"; // Change this to match the username in index.html
-        const correctPassword = "teacher123"; // Change this to match the password in index.html
+        const correctPassword = "teacher"; // Change this to match the password in index.html
         const enteredUsername = prompt("Enter username to access this page:");
         const enteredPassword = prompt("Enter password to access this page:");
 
