--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Character Tracker</title>
+    <title>DarbCraft</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         nav a { margin: 10px; text-decoration: none; }
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Character Tracker</h1>
+    <h1>Welcome to DårbCråft</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="add-character.html">Add Character</a>
