--- a/index.html
+++ b/index.html
@@ -3,21 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DarbCraft</title>
+    <title>Character Tracker</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        nav a { margin: 10px; text-decoration: none; }
-        input, button { display: block; margin: 10px 0; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-image: url('https://github.com/DarbCraft/DarbCRAFT/blob/main/images/open-uri20160811-32147-h3t28q_2fe94cab.jpeg?raw=true');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: #fff; /* Optional: Makes the text white for better readability on dark backgrounds */
+        }
+        nav a {
+            margin: 10px;
+            text-decoration: none;
+            color: #fff; /* Optional: Makes the navigation links white */
+        }
+        input, button {
+            display: block;
+            margin: 10px 0;
+        }
+        form {
+            background-color: rgba(0, 0, 0, 0.5); /* Optional: Adds a semi-transparent background to the form for better readability */
+            padding: 20px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to DårbCråft</h1>
+    <h1>Character Tracker</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="add-character.html">Add Character</a>
         <a href="update-values.html">Update Values</a>
         <a href="scoreboard.html">Scoreboard</a>
     </nav>
+    <form id="addCharacterForm">
+        <label for="charName">Character Name:</label>
+        <input type="text" id="charName" name="charName">
+        <label for="charType">Character Type:</label>
+        <select id="charType" name="charType">
+            <option value="Warrior">Warrior</option>
+            <option value="Healer">Healer</option>
+            <option value="Mage">Mage</option>
+        </select>
+        <button type="button" onclick="addCharacter()">Add Character</button>
+    </form>
+    <script>
+        function addCharacter() {
+            const name = document.getElementById('charName').value;
+            const type = document.getElementById('charType').value;
+            let hp, ap;
 
+            switch (type) {
+                case 'Warrior':
+                    hp = 10;
+                    ap = 15;
+                    break;
+                case 'Healer':
+                    hp = 8;
+                    ap = 20;
+                    break;
+                case 'Mage':
+                    hp = 6;
+                    ap = 30;
+                    break;
+                default:
+                    alert('Invalid character type!');
+                    return;
+            }
+
+            const newCharacter = { name, type, xp: 0, ap, hp };
+            let characters = JSON.parse(localStorage.getItem('characters')) || [];
+            characters.push(newCharacter);
+            localStorage.setItem('characters', JSON.stringify(characters));
+            document.getElementById('addCharacterForm').reset();
+        }
+    </script>
 </body>
 </html>
