--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Character Tracker</title>
+    <title>DårbCRÅFT</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Character Tracker</h1>
+    <h1>DårbCRÅFT</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="add-character.html">Add Character</a>
