--- a/scoreboard.html
+++ b/scoreboard.html
@@ -10,6 +10,30 @@
         table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
         table, th, td { border: 1px solid black; }
         th, td { padding: 8px; text-align: left; }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-image: url('https://github.com/DarbCraft/DarbCRAFT/blob/main/images/open-uri20160811-32147-h3t28q_2fe94cab.jpeg?raw=true');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: #fff; /* Optional: Makes the text white for better readability on dark backgrounds */
+        }
+        nav a {
+            margin: 10px;
+            text-decoration: none;
+            color: #fff; /* Optional: Makes the navigation links white */
+        }
+        input, button {
+            display: block;
+            margin: 10px 0;
+        }
+        form {
+            background-color: rgba(0, 0, 0, 0.5); /* Optional: Adds a semi-transparent background to the form for better readability */
+            padding: 20px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
