--- a/scoreboard.html
+++ b/scoreboard.html
@@ -13,7 +13,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-image: url('https://github.com/DarbCraft/DarbCRAFT/blob/main/images/open-uri20160811-32147-h3t28q_2fe94cab.jpeg?raw=true');
+            background-image: url('https://github.com/DarbCraft/DarbCRAFT/blob/main/images/Lambeau-Field-Team-Intro-scaled.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
