--- a/scoreboard.html
+++ b/scoreboard.html
@@ -5,32 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scoreboard</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        nav a { margin: 10px; text-decoration: none; }
-        table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
-        table, th, td { border: 1px solid black; }
-        th, td { padding: 8px; text-align: left; }
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-image: url('https://github.com/DarbCraft/DarbCRAFT/blob/main/images/Lambeau-Field-Team-Intro-scaled.jpeg');
+            background-image: url('https://github.com/DarbCraft/DarbCRAFT/blob/main/images/Lambeau-Field-Team-Intro-scaled.jpeg?raw=true');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            color: #fff; /* Optional: Makes the text white for better readability on dark backgrounds */
+            color: #fff; /* Makes the text white for better readability on dark backgrounds */
         }
         nav a {
             margin: 10px;
             text-decoration: none;
-            color: #fff; /* Optional: Makes the navigation links white */
+            color: #fff; /* Makes the navigation links white */
         }
-        input, button {
-            display: block;
-            margin: 10px 0;
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
         }
         form {
-            background-color: rgba(0, 0, 0, 0.5); /* Optional: Adds a semi-transparent background to the form for better readability */
+            background-color: rgba(0, 0, 0, 0.5); /* Adds a semi-transparent background to the form for better readability */
             padding: 20px;
             border-radius: 10px;
         }
