--- a/scoreboard.html
+++ b/scoreboard.html
@@ -33,7 +33,7 @@
             text-align: left;
         }
         form {
-            background-color: rgba(0, 0, 0, 0.5); /* Adds a semi-transparent background to the form for better readability */
+            background-color: black; 
             padding: 20px;
             border-radius: 10px;
         }
