--- a/scoreboard.html
+++ b/scoreboard.html
@@ -20,6 +20,9 @@
             text-decoration: none;
             color: #fff; /* Makes the navigation links white */
         }
+        nav a:link, nav a:visited {
+            color: #fff; /* Ensures visited links remain white */
+        }
         table {
             width: 100%;
             border-collapse: collapse;
