--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         nav a {
             margin: 10px;
             text-decoration: none;
-            color: #fff; /* Optional: Makes the navigation links white */
+            color: #fff; /* Makes the navigation links white */
+        }
+        nav a:link, nav a:visited {
+            color: #fff; /* Ensures visited links remain white */
         }
         input, button {
             display: block;
