--- a/scoreboard.html
+++ b/scoreboard.html
@@ -30,13 +30,14 @@
         }
         table, th, td {
             border: 1px solid black;
+            background-color: black;
         }
         th, td {
             padding: 8px;
             text-align: left;
         }
         form {
-            background-color: black; 
+            background-color: black; /* Solid black background */
             padding: 20px;
             border-radius: 10px;
         }
