--- a/update-values.html
+++ b/update-values.html
@@ -28,7 +28,17 @@
     </form>
 
     <h2>Select Players</h2>
-    <div id="playerList"></div>
+    <table id="charactersTable">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Type</th>
+                <th>XP</th>
+                <th>AP</th>
+                <th>HP</th>
+                <th>Action</th>
+            </tr>
+        </thead>
 
     <script>
         function loadPlayers() {
