--- a/update-values.html
+++ b/update-values.html
@@ -8,6 +8,9 @@
         body { font-family: Arial, sans-serif; margin: 20px; }
         nav a { margin: 10px; text-decoration: none; }
         input, button { display: block; margin: 10px 0; }
+        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
+        th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
+        th { background-color: #f4f4f4; }
     </style>
 </head>
 <body>
@@ -28,35 +31,50 @@
     </form>
 
     <h2>Select Players</h2>
-    <table id="charactersTable">
+    <table id="playerTable">
         <thead>
             <tr>
+                <th>Select</th>
                 <th>Name</th>
-                <th>Type</th>
                 <th>XP</th>
                 <th>AP</th>
                 <th>HP</th>
-                <th>Action</th>
             </tr>
         </thead>
+        <tbody></tbody>
+    </table>
 
     <script>
         function loadPlayers() {
-            const playersContainer = document.getElementById('playerList');
-            playersContainer.innerHTML = '';
+            const tableBody = document.querySelector('#playerTable tbody');
+            tableBody.innerHTML = '';
             const characters = JSON.parse(localStorage.getItem('characters')) || [];
             characters.forEach(char => {
+                const row = document.createElement('tr');
+                const selectCell = document.createElement('td');
                 const checkbox = document.createElement('input');
                 checkbox.type = 'checkbox';
-                checkbox.id = char.name;
                 checkbox.value = char.name;
-                const label = document.createElement('label');
-                label.htmlFor = char.name;
-                label.textContent = char.name;
-                const br = document.createElement('br');
-                playersContainer.appendChild(checkbox);
-                playersContainer.appendChild(label);
-                playersContainer.appendChild(br);
+                selectCell.appendChild(checkbox);
+                row.appendChild(selectCell);
+
+                const nameCell = document.createElement('td');
+                nameCell.textContent = char.name;
+                row.appendChild(nameCell);
+
+                const xpCell = document.createElement('td');
+                xpCell.textContent = char.xp;
+                row.appendChild(xpCell);
+
+                const apCell = document.createElement('td');
+                apCell.textContent = char.ap;
+                row.appendChild(apCell);
+
+                const hpCell = document.createElement('td');
+                hpCell.textContent = char.hp;
+                row.appendChild(hpCell);
+
+                tableBody.appendChild(row);
             });
         }
 
@@ -65,7 +83,7 @@
             const ap = parseInt(document.getElementById('updAP').value, 10) || 0;
             const hp = parseInt(document.getElementById('updHP').value, 10) || 0;
 
-            const selectedPlayers = Array.from(document.querySelectorAll('#playerList input:checked')).map(checkbox => checkbox.value);
+            const selectedPlayers = Array.from(document.querySelectorAll('#playerTable tbody input:checked')).map(checkbox => checkbox.value);
 
             let characters = JSON.parse(localStorage.getItem('characters')) || [];
             characters = characters.map(char => {
