--- a/update-values.html
+++ b/update-values.html
@@ -12,6 +12,13 @@
         th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
         th { background-color: #f4f4f4; }
     </style>
+    nav a {
+            margin: 10px;
+            text-decoration: none;
+            color: #00; /
+        }
+        nav a:link, nav a:visited {
+            color: #00; /
 </head>
 <body>
     <h1>Update Values</h1>
