--- a/update-values.html
+++ b/update-values.html
@@ -6,19 +6,13 @@
     <title>Update Values</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
-        nav a { margin: 10px; text-decoration: none; }
+        nav a { margin: 10px; text-decoration: none; color: #000; } /* Set initial color for links */
         input, button { display: block; margin: 10px 0; }
         table { width: 100%; border-collapse: collapse; margin: 20px 0; }
         th, td { border: 1px solid #ccc; padding: 10px; text-align: left; }
         th { background-color: #f4f4f4; }
+        nav a:link, nav a:visited { color: #000; } /* Ensure visited links have the same color */
     </style>
-    nav a {
-            margin: 10px;
-            text-decoration: none;
-            color: #00; /
-        }
-        nav a:link, nav a:visited {
-            color: #00; /
 </head>
 <body>
     <h1>Update Values</h1>
@@ -114,3 +108,4 @@
     </script>
 </body>
 </html>
+
