--- a/add-character.html
+++ b/add-character.html
@@ -9,6 +9,7 @@
         nav a { margin: 10px; text-decoration: none; }
         input, button, textarea { display: block; margin: 10px 0; }
         textarea { width: 100%; height: 100px; }
+        ul { padding-left: 20px; }
     </style>
 </head>
 <body>
@@ -29,6 +30,9 @@
         <button type="button" onclick="addMessage()">Add Message</button>
     </form>
 
+    <h2>Messages List</h2>
+    <ul id="messagesList"></ul>
+
     <script>
         function addMessage() {
             const newMessage = document.getElementById('newMessage').value;
@@ -38,7 +42,22 @@
             messages.push(newMessage);
             localStorage.setItem('messages', JSON.stringify(messages));
             document.getElementById('newMessage').value = '';
+            loadMessages();
         }
+
+        function loadMessages() {
+            const messagesList = document.getElementById('messagesList');
+            messagesList.innerHTML = '';
+
+            let messages = JSON.parse(localStorage.getItem('messages')) || [];
+            messages.forEach((message, index) => {
+                const li = document.createElement('li');
+                li.textContent = message;
+                messagesList.appendChild(li);
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', loadMessages);
     </script>
 </body>
 </html>
