--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a href="add-character.html">Add Character</a>
         <a href="update-values.html">Update Values</a>
         <a href="scoreboard.html">Scoreboard</a>
+        <a href="test-space.html">Test Space</a>
     </nav>
 
 </body>
