--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
   <script>
     // Web app's Firebase configuration
-    const firebaseConfig = {
-  apiKey: "AIzaSyARPzvh5lO8cj3k7_0WhQ6Ofp9gZpgifGM",
-  authDomain: "darbclassbeta.firebaseapp.com",
-  projectId: "darbclassbeta",
-  storageBucket: "darbclassbeta.appspot.com",
-  messagingSenderId: "254143610454",
-  appId: "1:254143610454:web:51752c298b3d07f77a85f7",
-  measurementId: "G-XFKLJM4ES1"
+        const firebaseConfig = {
+  apiKey: "AIzaSyDMKGYdzdzAcM9gv2ZJMsvpTq9vPQGcOl0",
+  authDomain: "darbcraft-34ac2.firebaseapp.com",
+  projectId: "darbcraft-34ac2",
+  storageBucket: "darbcraft-34ac2.appspot.com",
+  messagingSenderId: "897824122443",
+  appId: "1:897824122443:web:8fc1013b4ebcd4fdfe8fce",
+  measurementId: "G-RX2TK52Z1E"
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
@@ -110,7 +110,3 @@
   </script>
 </body>
 </html>
-
-</body>
-</html>
-npm install firebase
