--- a/Settings.html
+++ b/Settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Character</title>
+    <title>Settings</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         nav a { margin: 10px; text-decoration: none; }
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Add Character</h1>
+    <h1>Settings</h1>
     <nav>
         <a href="index.html">Home</a>
         <a href="update-values.html">Update Values</a>
