--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h1>DårbCRÅFT</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="add-character.html">Add Character</a>
+        <a href="add-character.html">Settings</a>
         <a href="update-values.html">Update Values</a>
         <a href="scoreboard.html">Scoreboard</a>
         <a href="test-space.html">Test Space</a>
