--- a/scoreboard.html
+++ b/scoreboard.html
@@ -47,7 +47,7 @@
     <h1>Scoreboard</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="add-character.html">Add Character</a>
+        <a href="Settings.html">Settings</a>
         <a href="update-values.html">Update Values</a>
     </nav>
     <table id="scoreboardTable">
