--- a/update-values.html
+++ b/update-values.html
@@ -19,7 +19,7 @@
     <h1>Update Values</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="add-character.html">Add Character</a>
+        <a href="Settings.html">Settings</a>
         <a href="scoreboard.html">Scoreboard</a>
     </nav>
     <form id="updateValuesForm">
