--- a/index.html
+++ b/index.html
@@ -33,19 +33,14 @@
             border-radius: 10px;
         }
     </style>
-
 </head>
 <body>
     <h1>DårbCRÅFT</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="Settings.html">Settings</a>
+        <a href="settings.html">Settings</a>
         <a href="update-values.html">Update Values</a>
         <a href="scoreboard.html">Scoreboard</a>
     </nav>
-    
-  </div>
-
-  </script>
 </body>
 </html>
